--- a/ConfBand.qmd
+++ b/ConfBand.qmd
@@ -49,7 +49,7 @@ Several developments have already been proposed to answer these questions. First
  @Liebl2019 have proposed a method based on random field theory and the volume-of-tube formula. They provide a band with locally varying widths using an unbiased estimator. Their method does not require the estimation of the full covariance function of the estimator, but only its diagonal. This reduces the computational time. From a practical viewpoint, @CB_survivalAnalysis2022 introduce a package to popularize simultaneous confidence bands, in the context of survival analysis. 
 
 Some papers, like ours, rely on several observations of the same function. @bunea2011 propose a threshold-type estimator and derive error bounds and simultaneous confidence bands, having an unbiased estimator. @TELSCHOW202270 propose a simultaneous confidence band based on the Gaussian kinematic formula. Again, it assumes access to an unbiased estimator of the function of interest.
-Note that recent extensions have been proposed, to nonstationary random field in @Telschow2023 and based on conformal prediction in @conformalPrediction2022. These extensions are out of the scope of this paper, focusing on the simple functional case.
+Note that recent extensions have been proposed, to nonstationary random field in @Telschow2023, based on conformal prediction in @conformalPrediction2022, or having a prediction goal in mind in @Jacques2023 by considering functional time series data set. These extensions are out of the scope of this paper, focusing on the simple functional case. 
 
 One limitation of all those approaches is that they do not generally take into account the bias of the functional estimator. @sun1994 proposed a bias correction for a particular class of functions but left the smoothing parameter choice open, leading to an unusable estimator. In the nonparametric framework, the bias is approximated  using the estimator of the second derivative of the underlying mean function (@Xia1998). But in general, there is a lack of discussion on how to handle the bias of the functional estimator, even in the simple case of a functional space of finite dimension. 
 
