--- a/ConfBand.qmd
+++ b/ConfBand.qmd
@@ -1357,7 +1357,7 @@ if (run == TRUE){
     
   }
   save(perf, file = "Res_Tab_other.RData")
-} else {load("res_Tab_other.RData") } ### charger les données
+} else {load("Res_Tab_other.RData") } ### charger les données
 perf.Fourier = cbind(perf[vec.L,,1,1],perf[vec.L,,2,1])
 rownames(perf.Fourier) = vec.L
 colnames(perf.Fourier) = c(" 50/10", "150/10", "50/40", "150/40")
@@ -1475,8 +1475,8 @@ if (run == TRUE){
   perf.sel = perf.sel / nb.repeat  
   
   save(perf.sel, file = "Res_Tab_other_2.RData")
-  save(dfBandWidth, file = "Red_Tab_other_2_width.RData")
-} else {load("res_Tab_other_2.RData") } ### charger les données
+  save(dfBandWidth, file = "Res_Tab_other_2_width.RData")
+} else {load("Res_Tab_other_2.RData") } ### charger les données
 perf.Fourier = matrix(perf.sel[,,,1], nrow=2, ncol=1)
 rownames(perf.Fourier) = c('L tilde', 'L.CV')
 
@@ -1500,7 +1500,7 @@ pref.Splines %>%
 #| label: fig-width-3
 #| fig-cap: "Illustrative example. The confidence level of the confidence band is evaluated from 100 repetitions. Data is generated using a Splines basis, and confidence bands are calculated with the Fourier (a) and Legendre (b) families, for several model selection criterion in rows, L in rows and several n and N in columns."
 
-load("Red_Tab_other_2_width.RData")
+load("Res_Tab_other_2_width.RData")
 ggplot(dfBandWidth, aes(x = dimension, y = Band.width)) + 
   geom_boxplot() + 
   facet_wrap(~basis, scales = "free_y")
