--- a/references.bib
+++ b/references.bib
@@ -10,6 +10,24 @@ pages = {115-140},
 year = {2017}
 }
 
+
+@inbook{RamsayBook,
+author = {Ramsay, James},
+publisher = {John Wiley & Sons, Ltd},
+isbn = {9780470013199},
+title = {Functional Data Analysis},
+booktitle = {Encyclopedia of Statistics in Behavioral Science},
+chapter = {},
+pages = {},
+doi = {https://doi.org/10.1002/0470013192.bsa239},
+url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/0470013192.bsa239},
+eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/0470013192.bsa239},
+year = {2005},
+keywords = {functional parameters, splines, basis functions, roughness penalty, dynamic model, registration},
+abstract = {Abstract Functional data analysis (FDA) models data using functions or functional parameters. The complexity of the functions is not assumed to be known in advance, so that methods are used for approximating these with as much flexibility as the data require.}
+}
+
+
 @article{Jacques2023,
       title={Simultaneous predictive bands for functional time series using minimum entropy sets}, 
       author={Nicolás Hernández and Jairo Cugliari and Julien Jacques},
